--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "request": "^2.34.0"
   },
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "underscore": "^1.8.3"
   }
